# AIRA

./: .env.example  .gitignore  Dockerfile  README.md  content.md  docker-compose.yml  package-lock.json  playwright.config.ts  prisma.config.ts  render.yaml
backend/: Cargo.toml  Dockerfile  livekit_admin.db  test-agent.Dockerfile  test-agent.js  test_jwt.rs
backend/agents/: .env.example  README.md  hybrid_config.py  main.py
backend/docker/: docker-compose.ai.yml  docker-compose.livekit.yml  egress.yaml  ingress.yaml  livekit.yaml  sip.yaml
backend/docs/: LIVEKIT_DEEP_TEST_REPORT.md
backend/migrations/: 20260204092336_create_users_table.sql  20260209100000_create_livekit_tables.sql  20260209110000_create_agents_tables.sql  20260210000000_create_comprehensive_schema.sql  20260210000001_add_project_id_to_agents.sql  20260210000002_create_audit_logs.sql  20260210000003_create_transcripts.sql  20260210000004_seed_roles.sql  20260210000005_seed_admin_user.sql  20260212000000_add_phone_to_users.sql  20260212010000_add_userid_shortid_to_projects.sql  init_postgres.sql
backend/src/: main.rs
backend/src/config/: database.rs
backend/src/entity/: agent_instances.rs  agent_logs.rs  agent_metrics.rs  agent_rooms.rs  agents.rs  analytics_snapshots.rs  api_keys.rs  audit_logs.rs  auto_recording_rules.rs  configs.rs  dispatch_rules.rs  egress.rs  ingress.rs  layout_templates.rs  metrics.rs  mod.rs  prelude.rs  project_ai_configs.rs  projects.rs  regions.rs  roles.rs  room_templates.rs  rooms.rs  service_accounts.rs  sessions.rs  sip.rs  sip_trunks.rs  storage_configs.rs  (+2 more)
(+278 files in other folders)
