[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

dotenvy = "0.15"

sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "with-uuid", "with-chrono", "sqlx-all"] }

argon2 = "0.5"
rand_core = "0.6"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1", features = ["v4"] }
rust_decimal = "1.33"

# For migrations
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }

tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.3", features = ["cors"] }

# LiveKit integration
# livekit = "0.2"  # Removed due to WebRTC compilation issues
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"

# Metrics
prometheus = "0.13"

# Config management
tokio-fs = "0.1"
tempfile = "3"
serde_yaml = "0.9"
